# aequitas

./: Dockerfile  README.md  pyproject.toml
src/aequitas/: audit.py
src/aequitas/utils/: threshold.py
