[project]
name = "aequitas"
version = "1.1.0"
description = "The bias and fairness audit toolkit."
readme = "README.md"
license = "MIT"
keywords = ["fairness", "bias", "aequitas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Center for Data Science and Public Policy", email = "datascifellows@gmail.com" },
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.0.3, <3.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "altair>=5.5.0",
    "scipy>=1.10.1",
    "validators>=0.33.0",
    "numpy>=1.26.0",
    "fastparquet>=2024.11.0",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/dssg/aequitas"
Documentation = "https://dssg.github.io/aequitas/"
Repository = "https://github.com/dssg/aequitas"
Issues = "https://github.com/dssg/aequitas/issues"

[project.optional-dependencies]
cli = [
    "sqlalchemy>=1.1.1",
    "tabulate>=0.9.0",
    "xhtml2pdf>=0.2.15",
    "ohio>=0.2.0",
    "markdown2>=2.3.5",
]
webapp = [
    "flask>=2.0.0",
    "flask-bootstrap>=3.3.7.1",
]
flow = [
    "torch>=2.4.0",
    "optuna>=3.6.1",
    "aif360>=0.6.1",
    "lightgbm>=4.5.0",
    "fairgbm>=0.9.14",
    "fairlearn>=0.10.0",
    "hydra-core>=1.3.2",
    "hyperparameter-tuning>=0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.5",
]
